# vulnscan

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
tests/: test_headers.py  test_registry.py  test_scanner.py
vulnscan/: cli.py  scanner.py  types.py
vulnscan/checks/: __init__.py  base.py  cookies.py  cors.py  directories.py  headers.py
